new ReflectionUtil, replacing unsave